apps/cluster1/maloja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maloja
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 42010
    name: http
  selector:
    app.kubernetes.io/name: maloja
    app.kubernetes.io/part-of: maloja
  type: ClusterIP
