apps/cluster1/maloja/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maloja
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - maloja.home.wugi.info
    secretName: maloja-ingress-certs
  rules:
  - host: maloja.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: maloja
            port:
              number: 80
